<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameInput"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameInput"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumberInput"
        android:inputType="phone" />

    <EditText
        android:id="@+id/bloodTypeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bloodTypeInput"
        android:inputType="text" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ageInput"
        android:inputType="number" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailInput"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cityInput"
        android:inputType="text" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton" />

</LinearLayout>